# CalibAnything

./: CMakeLists.txt
data/kitti/: calib.json
include/: calibration.hpp
src/: run_lidar2camera.cpp
